packages/build/tests/error/clean_stack/fixtures/plugin/plugin.js
module.exports = {
  name: 'netlify-plugin-example',
  onInit({
    utils: {
      build: { failBuild },
    },
  }) {
    failBuild('test')
  },
}
